# cpp-helloesp32

./: .gitignore  CMakeLists.txt  platformio.ini
.config/: config.h.in  passwords.cmake
src/: config.h  main.cpp  stdafx.h
tests/: CMakeLists.txt
tests/basic_tests/: basic_check_ma.cpp  hello_basic.cpp
